--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ ul {
 }
 .logo {
   font-family: "Raleway", sans-serif;
-  color: #2196f3;
+  color: var(--accent-text-color);
 }
 .logo-b {
   font-family: "Raleway", sans-serif;
@@ -132,7 +132,7 @@ ul {
 }
 .link:hover,
 .link:focus {
-  color: #2196f3;
+  color: var(--accent-text-color);
 }
 .mail-tel {
   text-decoration: none;
@@ -199,9 +199,18 @@ ul {
   margin-right: auto;
   margin-left: auto;
   padding: 10px 32px;
-  background-color: #2196f3;
+  background-color: var(--accent-text-color);
   cursor: pointer;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.button:hover,
+.button:focus {
+  background-color: #1c89e2;
+}
+
 .btn-text {
   display: flex;
   font-weight: 700;
@@ -380,7 +389,7 @@ img {
 .item-icon:hover,
 .item-icon:focus {
   fill: #ffffff;
-  background-color: #2196f3;
+  background-color: var(--accent-text-color);
 }
 .clients-list {
   display: flex;
@@ -530,7 +539,7 @@ img {
   cursor: pointer;
   border: transparent;
   border-radius: 4px;
-  transition-property: box-shadow;
+  transition-property: box-shadow, color, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -540,7 +549,7 @@ img {
 .button-filter:hover,
 .button-filter:focus {
   color: #ffffff;
-  background-color: #2196f3;
+  background-color: var(--accent-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -674,6 +683,7 @@ li:focus .img-product::before {
   height: 100vh;
 
   background-color: rgba(0, 0, 0, 0.2);
+  perspective: 800px;
 }
 
 .modal {
@@ -682,9 +692,12 @@ li:focus .img-product::before {
   min-height: 581px;
   border-radius: 4px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotateY(0deg);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close {
   width: 30px;
@@ -699,6 +712,9 @@ li:focus .img-product::before {
   top: 8px;
   right: 8px;
   cursor: pointer;
+}
+.is-hidden .modal {
+  transform: translate(-50%, -50%) rotateY(-90deg);
 }
 .is-hidden {
   opacity: 0;
