--- a/css/styles.css
+++ b/css/styles.css
@@ -683,7 +683,12 @@ li:focus .img-product::before {
   height: 100vh;
 
   background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms, visibility 250ms;
   perspective: 800px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) rotateY(-90deg);
 }
 
 .modal {
@@ -713,9 +718,7 @@ li:focus .img-product::before {
   right: 8px;
   cursor: pointer;
 }
-.is-hidden .modal {
-  transform: translate(-50%, -50%) rotateY(-90deg);
-}
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
