--- a/css/styles.css
+++ b/css/styles.css
@@ -396,11 +396,13 @@ img {
   align-items: center;
   margin-bottom: 94px;
 }
+.clients-link {
+  margin-left: 30px;
+}
 
 .clients-icon {
   border: 1px solid rgba(175, 177, 184, 1);
   border-radius: 4px;
-  margin-left: 30px;
   fill: #afb1b8;
   transition-property: fill;
   transition-duration: 250ms;
